--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,3 +49,7 @@ table {
 table thead th { border-bottom: 1px solid #ddd; }
 th, td { padding: 5px; }
 thead, tfoot, tr:nth-child(even) { background: #eee; }
+
+.social {
+  text-align: center;
+}
