--- a/themes/hugo-xmin/static/css/style.css
+++ b/themes/hugo-xmin/static/css/style.css
@@ -49,3 +49,11 @@ table {
 table thead th { border-bottom: 1px solid #ddd; }
 th, td { padding: 5px; }
 thead, tfoot, tr:nth-child(even) { background: #eee; }
+
+.social {
+  text-align: center;
+}
+
+.social a {
+  text-decoration: none;
+}
