--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -25,7 +25,8 @@ hr {
 /* code */
 pre {
   border: 1px solid #ddd;
-  box-shadow: 5px 5px 5px #eee;
+  margin: 0px;
+  /* box-shadow: 5px 5px 5px #eee; */
   padding: 1em;
   overflow-x: auto;
 }
