--- a/themes/hugo-xmin/static/css/fonts.css
+++ b/themes/hugo-xmin/static/css/fonts.css
@@ -2,6 +2,6 @@ body {
   font-family: Optima, Candara, Calibri, Arial, sans-serif;
 }
 code {
-  font-family: "Lucida Console", Monaco, monospace;
+  font-family: Monaco, monospace;
   font-size: 85%;
 }
