Rust Sharing Object
Signed-off-by: Vineel Kovvuri <vineel.kovvuri@gmail.com>

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -61,3 +61,9 @@ pre tr:nth-child(even) { background: #fff; }
 .social a {
   text-decoration: none;
 }
+
+mark {
+  background: linear-gradient(-100deg, hsla(48,92%,75%,.3), hsla(48,92%,75%,.7) 95%, hsla(48,92%,75%,.1));
+  border-radius: 1em 0;
+  padding: .5rem;
+}
