--- a/themes/hugo-xmin/layouts/blog/list.html
+++ b/themes/hugo-xmin/layouts/blog/list.html
@@ -10,7 +10,7 @@
   {{ range (where $pages "Section" "!=" "") }}
     <li>
       <span class="date">{{ .Date.Format "2006/01/02" }}</span>
-      <a href="{{ .RelPermalink }}">{{ .Title | markdownify }} - {{.Section}}</a>
+      <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a>
     </li>
   {{ end }}
 </ul>
