--- a/themes/hugo-xmin/layouts/blog/single.html
+++ b/themes/hugo-xmin/layouts/blog/single.html
@@ -2,7 +2,18 @@
 <div class="article-meta">
 <h1><span class="title">{{ .Title | markdownify }}</span></h1>
 {{ with .Params.author }}<h2 class="author">{{ . }}</h2>{{ end }}
-{{ if (gt .Params.date 0) }}<h2 class="date">{{ .Date.Format "2006/01/02" }}</h2>{{ end }}
+{{ if (gt .Params.date 0) }}
+<h3 class="date">
+    {{ .Date.Format "2006/01/02" }}
+    {{ with .Params.tags }}
+        |
+        {{ range $index, $tag := . }}
+            {{- if $index }}, {{ end -}}
+            <a href="{{ "/tags/" | relURL }}{{ $tag | urlize }}">{{ $tag }}</a>
+        {{ end }}
+    {{ end }}
+</h3>
+{{ end }}
 </div>
 
 <main>
