--- a/themes/hugo-xmin/layouts/blog/single.html
+++ b/themes/hugo-xmin/layouts/blog/single.html
@@ -16,6 +16,13 @@
 {{ end }}
 </div>
 
+{{ if .TableOfContents }}
+    <aside class="toc">
+        <h2>Table of Contents</h2>
+        {{ .TableOfContents }}
+    </aside>
+{{ end }}
+
 <main>
 {{ .Content }}
 </main>
