Improve Bookmarks page with tags
Signed-off-by: Vineel Kovvuri <1283328+vineelkovvuri@users.noreply.github.com>

--- a/themes/hugo-xmin/layouts/bookmarks/list.html
+++ b/themes/hugo-xmin/layouts/bookmarks/list.html
@@ -2,18 +2,31 @@
 
 {{ .Content }}
 
-<h1>Bookmarks</h1>
+<h1>Windows Setup</h1>
 
 <ul>
   {{ $pages := .Pages }}
   {{ if .IsHome }}{{ $pages = .Site.RegularPages }}{{ end }}
   {{ range (where $pages "Section" "!=" "") }}
-  {{if eq .Section "bookmarks"}}
-    <li>
-      <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a>
-    </li>
-  {{ end }}
+    {{ if and (eq .Section "bookmarks") (intersect .Params.tags (slice "WindowsSetup") | len) }}
+      <li>
+        <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a>
+      </li>
+    {{ end }}
   {{ end }}
 </ul>
 
+<h1>Others</h1>
+
+<ul>
+  {{ $pages := .Pages }}
+  {{ if .IsHome }}{{ $pages = .Site.RegularPages }}{{ end }}
+  {{ range (where $pages "Section" "!=" "") }}
+    {{ if and (eq .Section "bookmarks") (intersect .Params.tags (slice "Others") | len) }}
+      <li>
+        <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a>
+      </li>
+    {{ end }}
+  {{ end }}
+</ul>
 {{ partial "footer.html" . }}
