Remove underlines for a href links
Signed-off-by: Vineel Kovvuri <1283328+vineelkovvuri@users.noreply.github.com>

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -58,8 +58,12 @@ pre tr:nth-child(even) { background: #fff; }
   text-align: center;
 }
 
-.social a {
+a {
   text-decoration: none;
+  color: #0645ad;
+}
+a:hover {
+  text-decoration: underline;
 }
 
 mark {
