--- a/themes/hugo-xmin/layouts/vlog/list.html
+++ b/themes/hugo-xmin/layouts/vlog/list.html
@@ -8,7 +8,7 @@
 {{ .Content }}
 
 <h1>Vlog</h1>
-
+<!-- 
 <main>
     {{ range $.Site.Data.youtube.videos }}
     <span class="date">{{ .date }}</span>
@@ -18,6 +18,6 @@
     </div>
     <br>
     {{ end }}
-</main>
+</main> -->
 
 {{ partial "footer.html" . }}
