--- a/docs/css/fonts.css
+++ b/docs/css/fonts.css
@@ -1,9 +1,21 @@
-body {
+/* body {
   font-family: Optima, Candara, Calibri, Arial, sans-serif;
-}
-code {
+} */
+/* code {
   font-family: Monaco, monospace;
   font-size: 85%;
+} */
+
+body {
+  font-family: fira sans ot, fira sans, trebuchet ms, roboto, sans-serif;
+}
+
+
+code {
+    background: #f1f1f1;
+    border-radius: 3px;
+    padding: 3px 5px 2px;
+    font-family: sfmono-regular,consolas,liberation mono,menlo,monospace
 }
 /* .date {
   font-family: monospace;
