--- a/themes/hugo-xmin/layouts/bookmarks/list.html
+++ b/themes/hugo-xmin/layouts/bookmarks/list.html
@@ -16,6 +16,20 @@
   {{ end }}
 </ul>
 
+<h1>Linux Setup</h1>
+
+<ul>
+  {{ $pages := .Pages }}
+  {{ if .IsHome }}{{ $pages = .Site.RegularPages }}{{ end }}
+  {{ range (where $pages "Section" "!=" "") }}
+    {{ if and (eq .Section "bookmarks") (intersect .Params.tags (slice "LinuxSetup") | len) }}
+      <li>
+        <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a>
+      </li>
+    {{ end }}
+  {{ end }}
+</ul>
+
 <h1>Others</h1>
 
 <ul>
