--- a/themes/hugo-xmin/layouts/tools/single.html
+++ b/themes/hugo-xmin/layouts/tools/single.html
@@ -1,1 +1,53 @@
+{{ partial "header.html" . }}
+<div class="article-meta">
+<h1><span class="title">{{ .Title | markdownify }}</span></h1>
+{{ with .Params.author }}<h2 class="author">{{ . }}</h2>{{ end }}
+{{ if (gt .Params.date 0) }}
+<h3 class="date">
+    {{ .Date.Format "2006/01/02" }}
+    {{ with .Params.tags }}
+        |
+        {{ range $index, $tag := . }}
+            {{- if $index }}, {{ end -}}
+            <a href="{{ "/tags/" | relURL }}{{ $tag | urlize }}">{{ $tag }}</a>
+        {{ end }}
+    {{ end }}
+</h3>
+{{ end }}
+</div>
+
+<!-- {{ if .Params.toc }}
+    {{ if .TableOfContents }}
+        <aside class="toc">
+            <h2>Table of Contents</h2>
+            {{ .TableOfContents }}
+        </aside>
+    {{ end }}
+{{ end }} -->
+
+<main>
 {{ .Content }}
+</main>
+
+<hr/>
+<!-- ===== Comments Section (powered by Giscus) ===== -->
+<section id="comments" class="giscus">
+  <script src="https://giscus.app/client.js"
+    data-repo="vineelkovvuri/vineelkovvuri.github.io"
+    data-repo-id="R_kgDOLIbzLw"
+    data-category="General"
+    data-category-id="DIC_kwDOLIbzL84CwjtF"
+    data-mapping="pathname"
+    data-strict="0"
+    data-reactions-enabled="1"
+    data-emit-metadata="0"
+    data-input-position="top"
+    data-theme="preferred_color_scheme"
+    data-lang="en"
+    data-loading="lazy"
+    crossorigin="anonymous"
+    async>
+  </script>
+</section>
+
+{{ partial "footer.html" . }}
