--- a/themes/hugo-xmin/layouts/bookmarks/list.html
+++ b/themes/hugo-xmin/layouts/bookmarks/list.html
@@ -54,6 +54,20 @@
   {{ end }}
 </ul>
 
+<h1>References</h1>
+<ul>
+  {{ $pages := .Pages }}
+  {{ if .IsHome }}{{ $pages = .Site.RegularPages }}{{ end }}
+  {{ range (where $pages "Section" "!=" "") }}
+    {{ if and (eq .Section "bookmarks") (intersect .Params.tags (slice "References") | len) }}
+      <li>
+        <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a>
+      </li>
+    {{ end }}
+  {{ end }}
+</ul>
+
+
 
 <h1>Others</h1>
 <ul>
